system identification H1 estimate development

--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -272,6 +272,9 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s. Then
 \end{align*}
 \end{proof}
 
+%=======================================
+\section{Expectation inner product space}
+%=======================================
 When possible, we like to generalize any given mathematical structure
 to a more general mathematical structure and then take advantage of
 the properties of that more general structure.
@@ -380,7 +383,7 @@ properties:
 \begin{theorem}
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} with expectation functional $\pE$.
-\thmbox{\begin{array}{l >{\ds}r c >{\ds}l D}
+\thmbox{\begin{array}{F >{\ds}r c >{\ds}l >{\scs}m{41mm}}
   1. & \sqrt{\pE\left(\sum_{n=1}^{\xN}\rvX_n\right)}
      &\le& \sum_{n=1}^{\xN} \pE(\rvX_nX_n^\ast)
      & (\thme{Generalized triangle inequality})
