--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -289,9 +289,11 @@ Let $\rvx(n)$ and $\rvy(n)$ be \prope{wide sense stationary} \fncte{random seque
 with auto-correlation $\Rxx(m)$ and cross-correlation $\Rxy(m)$.
 Let $\opDTFT$ be the \ope{Discrete Time Fourier Transform} (\ope{DTFT}) operator\ifsxref{dtft}{def:dtft}.
 \\
-\defbox{\begin{array}{MMrclcl}
-   The \opd{power spectral density} & (\opd{PSD}) $\ZSxx(z)$ of $\vx$ is           & \Swxx(z) &\eqd& \opDTFT{\Rxx(m)} &\eqd& \ds \sum_{m\in\Z} \Rxx(m) e^{-i\omega m}\\
-   The \opd{cross spectral density} & (\opd{CSD}) $\ZSxy(z)$ of $\vx$ and $\vy$ is & \Swxy(z) &\eqd& \opDTFT{\Rxy(m)} &\eqd& \ds \sum_{m\in\Z} \Rxy(m) e^{-i\omega m}
+\defbox{\begin{array}{M rclcl}
+  The \opd{power spectral density}
+  \\(\opd{PSD}) $\ZSxx(z)$ of $\vx$ is           & \Swxx(z) &\eqd& \opDTFT{\Rxx(m)} &\eqd& \ds \sum_{m\in\Z} \Rxx(m) e^{-i\omega m}
+  \\The \opd{cross spectral density}
+  \\(\opd{CSD}) $\ZSxy(z)$ of $\vx$ and $\vy$ is & \Swxy(z) &\eqd& \opDTFT{\Rxy(m)} &\eqd& \ds \sum_{m\in\Z} \Rxy(m) e^{-i\omega m}
 \end{array}}
 \end{definition}
 
