--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -269,9 +269,6 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:dual_addnoise}.
 \begin{minipage}{\tw-70mm}
 \begin{theorem}
 Let $\opS$ be the \structe{system} illustrated to the right.
-%\footnote{
-%  \citerpg{shin2008}{293}{0470725648}
-%  }
 \label{thm:sysH_addnoise}
 %---------------------------------------
 \end{theorem}
@@ -291,8 +288,6 @@ Let $\opS$ be the \structe{system} illustrated to the right.
       \Rxy(m)&=& \Rxq(m)
            \\&=& \Rpy(m)
            \\&=& \Rpq(m)
-           \\
-      \Ryy(m)&=& \Rqq(m) + \Rvv(m)
   \end{array}}
   }
 \\
@@ -362,10 +357,6 @@ Let $\opS$ be the \structe{system} illustrated to the right.
   \\&= \Rpq(m)
     && \text{by definition of $\Rpq$}
     && \text{\xref{def:Rxym}}
-  \\
-  \Ryy(m)
-    &= \Rqq(m) + \Rvv(m)
-    && \text{by \prefp{thm:xvy}}
 \end{align*}
 \end{proof}
 
@@ -427,10 +418,10 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
   \end{array}}
   \implies
   \brb{\begin{array}{FrclD}
-      (1).&\Szyy(z)      &=& \brs{\Szxx(z)     -\Szuu(z)}\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z)   & and
-    \\(2).&\Swyy(\omega) &=& \brs{\Swxx(\omega)-\Swuu(\omega)}\abs{\FH(\omega)}^2 + \Swvv(\omega)     & and
-    \\(3).&\Szxy(z)      &=& \brs{\Szxx(z)     -\Szuu(z)}     \ZH^\ast\brp{\frac{1}{z^\ast}}          & and
-    \\(4).&\Swxy(\omega) &=& \brs{\Swxx(\omega)-\Swuu(\omega)}\FH^\ast(\omega)
+      (1).&\Szyy(z)      &=& \brs{\Szxx(z)     +\Szuu(z)}\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z)   & and
+    \\(2).&\Swyy(\omega) &=& \brs{\Swxx(\omega)+\Swuu(\omega)}\abs{\FH(\omega)}^2 + \Swvv(\omega)     & and
+    \\(3).&\Szxy(z)      &=& \brs{\Szxx(z)     +\Szuu(z)}     \ZH^\ast\brp{\frac{1}{z^\ast}}          & and
+    \\(4).&\Swxy(\omega) &=& \brs{\Swxx(\omega)+\Swuu(\omega)}\FH^\ast(\omega)
   \end{array}}
   }
 \end{corollary}
@@ -441,28 +432,32 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
     && \text{by \prefp{cor:xvy}}
   \\&= \Szpp(z)\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z)
     && \text{by \prefp{thm:ZSxy}}
+  \\&= \brs{\Szxx(z)+\Szuu(z)}\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z)
+    && \text{by \prefp{cor:xvy}}
   \\
   \Swyy(\omega)
     &= \Swqq(\omega) + \Swvv(\omega)
     && \text{by \prefp{cor:xvy}}
   \\&= \Swpp(\omega)\abs{\FH(\omega)}^2 + \Swvv(\omega)
     && \text{by \prefp{cor:Swxy}}
+  \\&= \brs{\Swxx(\omega)+\Swuu(\omega)}\abs{\FH(\omega)}^2 + \Swvv(\omega)
+    && \text{by \prefp{cor:xvy}}
   \\
   \Szxy(z)
     &= \Szpq(z)
     && \text{by \prefp{cor:sysH_addnoise}}
   \\&= \Szpp(z)\ZH\brp{\frac{1}{z^\ast}}
     && \text{by \prefp{thm:ZSxy}}
-  \\&= \brs{\Szxx(z)-\Szuu(z)}\ZH\brp{\frac{1}{z^\ast}}
-    && \text{by definition of $\opS$}
+  \\&= \brs{\Szxx(z)+\Szuu(z)}\ZH\brp{\frac{1}{z^\ast}}
+    && \text{by \prefp{cor:xvy}}
   \\
   \Swxy(\omega)
     &= \Swpq(\omega)
     && \text{by \prefp{cor:sysH_addnoise}}
   \\&= \Swpp(\omega)\FH^\ast(\omega)
     && \text{by \prefp{cor:Swxy}}
-  \\&= \brs{\Swxx(\omega)-\Swuu(\omega)}\ZH\brp{\frac{1}{z^\ast}}
-    && \text{by definition of $\opS$}
+  \\&= \brs{\Swxx(\omega)+\Swuu(\omega)}\ZH\brp{\frac{1}{z^\ast}}
+    && \text{by \prefp{cor:xvy}}
 \end{align*}
 \end{proof}
 
@@ -470,6 +465,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \begin{minipage}{\tw-80mm}
 \begin{corollary}
 \label{cor:GHz}
+\label{cor:GHw}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated to the right.
 \end{corollary}
@@ -484,59 +480,35 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     \\(D).& $\rvx(n)$, $\rvu(n)$, $\rvv(n)$ are &\prope{uncorrelated}
   \end{array}}
   \implies
-  \brb{\begin{array}{rcl}
-    \Szsy(z) &=& \Szsq(z) = \Szry(z) = \Szrq(z)
-           \\&=& \ZG(z)\Szxy(z)
+  \brb{\begin{array}{FrclD}
+      (1).& \Szsy(z)      &=& \ZG(z)     \Szxy(z)      & and
+    \\(2).& \Swsy(\omega) &=& \FG(\omega)\Swxy(\omega) &
   \end{array}}
   }
 \\
 \begin{proof}
 \begin{align*}
-  \Swrq(\omega)
-    &= \FG(\omega)\Swpq(\omega)
+  \Szsy(z)
+    &= \Szrq(z)
+    && \text{by \prefp{cor:dual_addnoise}}
+    && \text{and (B), (C) and (D)}
+  \\&= \ZG(z)\Szpq(z)
     && \text{by \prefp{thm:xGw_xHy}}
-  \\&= \FG(\omega)\Swxy(\omega)
+    && \text{and (A)}
+  \\&= \ZG(z)\Szxy(z)
     && \text{by \prefp{thm:sysH_addnoise}}
-    \\
+    && \text{and (A)}
+  \\
   \Swsy(\omega)
     &= \Swrq(\omega)
-    && \text{\prefp{cor:dual_addnoise}}
-  \\&= \FG(\omega)\Swxy(\omega)
-    && \text{by previous result}
-\end{align*}
-\end{proof}
-
-%---------------------------------------
-\begin{corollary}
-\label{cor:GHw}
-%---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{cor:GHz}.
-\\
-\corbox{
-  \brb{\begin{array}{M}
-    hypotheses of\\
-    \prefpp{cor:GHz}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{rcl}
-    \Swsy(\omega) &=& \Swsq(\omega) = \Swry(\omega) = \Swrq(\omega)
-                \\&=& \FG(\omega)\Swxy(\omega)
-  \end{array}}
-  }
-\end{corollary}
-\begin{proof}
-\begin{align*}
-  \Swrq(\omega)
-    &= \FG(\omega)\Swpq(\omega)
+    && \text{by \prefp{cor:dual_addnoise}}
+    && \text{and (B), (C) and (D)}
+  \\&= \FG(\omega)\Swpq(\omega)
     && \text{by \prefp{thm:xGw_xHy}}
+    && \text{and (A)}
   \\&= \FG(\omega)\Swxy(\omega)
     && \text{by \prefp{thm:sysH_addnoise}}
-    \\
-  \Swsy(\omega)
-    &= \Swrq(\omega)
-    && \text{\prefp{cor:dual_addnoise}}
-  \\&= \FG(\omega)\Swxy(\omega)
-    && \text{by previous result}
+    && \text{and (A)}
 \end{align*}
 \end{proof}
 
