--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1513,10 +1513,14 @@
 % algebras
 %--------------------------------------
 \newcommand{\algA}[0]{\mbfA}         %
-\renewcommand{\Re} [0]{{\mathOpp{R}_{\mathsfup{e}}}}
-\renewcommand{\Im} [0]{{\mathOpp{I}_{\mathsfup{m}}}}
-\newcommand{\Reb}[1]{{\Re\left[#1\right]}}
-\newcommand{\Imb}[1]{{\Im\left[#1\right]}}
+%\renewcommand{\Re} [0]{{\mathOpp{R}_{\mathsfup{e}}}}
+%\renewcommand{\Im} [0]{{\mathOpp{I}_{\mathsfup{m}}}}
+\newcommand{\Real} [0]{{\mathOp{R}_{\mathsfup{e}}}}
+\newcommand{\Imag} [0]{{\mathOp{I}_{\mathsfup{m}}}}
+\renewcommand{\Re} [0]{{\Real}}
+\renewcommand{\Im} [0]{{\Imag}}
+\newcommand{\Reb}[1]{{\Real\left[#1\right]}}
+\newcommand{\Imb}[1]{{\Imag\left[#1\right]}}
 
 %--------------------------------------
 % Measure theory
