--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -28,19 +28,19 @@
     image: & \url{https://en.wikipedia.org/wiki/File:Karl_Popper.jpg}, ``no known copyright restrictions"
   \end{tabular}}
 
-Let $\opS$ be a \structe{system} with \fncte{impulse response} $\fh[n]$ with
+Let $\opS$ be a \structe{system} with \fncte{impulse response} $\fh(n)$ with
 with \ope{DTFT} $\fH(\omega)$,
-input $\rvx[n]$, and output $\rvy[n]$. 
+input $\rvx(n)$, and output $\rvy(n)$. 
 Often in the field of ``digital signal processing" (DSP), $\opS$ is a ``filter" 
-with known $\fh[n]$ and $\fH(\omega)$ because the filter $\opS$ was 
-designed by a designer who had direct control over $\fh[n]$.
+with known $\fh(n)$ and $\fH(\omega)$ because the filter $\opS$ was 
+designed by a designer who had direct control over $\fh(n)$.
 
 However in many other practical situations, $\opS$ is some other system 
-for which $\fh[n]$ and $\fH(\omega)$ is \emph{not} known\ldots but which we may
+for which $\fh(n)$ and $\fH(\omega)$ is \emph{not} known\ldots but which we may
 want to \ope{estimate}. Examples of such $\opS$ is a 
 device on an industrial shaker table, a communication channel, or the entire earth.
 
-Determining $\fh[n]$ and/or $\fH(\omega)$ is part of an operation called ``\ope{system identication}".
+Determining $\fh(n)$ and/or $\fH(\omega)$ is part of an operation called ``\ope{system identication}".
 Determining $\fH(\omega)$ in particular is referred to as
 ``\ope{Frequency Response Identification}"\footnote{\citerpg{shin2008}{292}{0470725648}}
 or as 
@@ -87,13 +87,13 @@ Consider the additive noise system $\opS$ illustrated to the right:
 \hfill\tbox{\includegraphics{graphics/sysH_xyuv--.pdf}}
 \\
 In the very special (a.k.a unrealistic) case of $\opS$ having \prope{zero measurement noise}
-($\rvu[n]=\rvv[n]=0$), 
-$\fh[n]$ being \prope{linear time invariant} (\prope{LTI}), 
-and input $\rvx[n]$ being \prope{wide sense stationary}\ldots
-then we can determine (a.k.a ``identify") $\fh[n]$ or $\fH(\omega)$
+($\rvu(n)=\rvv(n)=0$), 
+$\fh(n)$ being \prope{linear time invariant} (\prope{LTI}), 
+and input $\rvx(n)$ being \prope{wide sense stationary}\ldots
+then we can determine (a.k.a ``identify") $\fh(n)$ or $\fH(\omega)$
 exactly by $\fH(\omega)=\ffrac{\Swyx(\omega)}{\Swxx(\omega)}$ \xref{cor:Swxy}.
 
-However, in practical situations, there is measurement error \xref{fig:xhyplusv}. 
+However, in practical situations, there is measurement error. % \xref{fig:xhyplusv}. 
 An example may include 
 ``road noise" from a test being performed in a moving vehicle.
 
@@ -123,7 +123,7 @@ then $\estH_1$ (next definition) is the ideal estimator in the sense that $\estH
   }
 \label{def:H1}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}l}
   The transfer function $\estH_1(\omega)$ is defined as & \estH_1(\omega) &\eqd& \frac{\Swyx(\omega)}{\Swxx(\omega)}
 \end{array}}
@@ -160,7 +160,7 @@ Note also that in the case of both no input and no output noise, then $\estH_1=\
   }
 \label{def:H2}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}l}
   The transfer function $\estH_2(\omega)$ is defined as & \estH_2(\omega) &\eqd& \frac{\Swyy(\omega)}{\Swxy(\omega)}
 \end{array}}
@@ -196,7 +196,7 @@ this approach summarizes \pref{def:Hv} -- \prefpp{def:Hkappa}.
   }
 \label{def:Havg}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}>{\ds}l}
   The transfer function $\estHavg(\omega)$ is defined as & \estHavg(\omega) &\eqd& \frac{\estH_1(\omega) + \estH_2(\omega)}{2}
 \end{array}}
@@ -209,7 +209,7 @@ Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
   }
 \label{def:Hgm}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}>{\ds}l}
   The transfer function $\estHgm(\omega)$ is defined as & \estHgm(\omega) &\eqd& \sqrt{\estH_1(\omega)\estH_2(\omega)}
 \end{array}}
@@ -224,7 +224,7 @@ Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
   }
 \label{def:Hharm}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}>{\ds}l}
   The transfer function $\estHharm(\omega)$ is defined as & \estHharm(\omega) &\eqd& \frac{1}{\frac{1}{\estH_1(\omega)} + \frac{1}{\estH_2(\omega)}}
 \end{array}}
@@ -238,7 +238,7 @@ Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
   }
 \label{def:Hv}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defboxt{
   The estimate $\estHv(\omega)$ is defined as 
   \\\indentx$\ds
@@ -266,7 +266,7 @@ $\estHs\to\estH_2$ as $s\to\infty$. % \xref{thm:Hs}.
   }
 \label{def:Hs}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defboxt{
   The estimate $\estHs(\omega)$ with \vald{scaling parameter} $s\in\intco{0}{\infty}$ is defined as 
   \\\indentx$\ds
@@ -279,7 +279,7 @@ Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
 
 Wicks and Vold's $\estHs$ estimates $\fH$ using a single parameter $s$
 that is \prope{constant} with respect to frequency.
-This is suitable for additive white noise $\rvw[n]$, which has constant spectral density 
+This is suitable for additive white noise $\rvw(n)$, which has constant spectral density 
 $\Swww(\omega)=\pvar_w$.
 However, not all noise is white noise.
 And later in 2006, White, Tan and Hammond proposed a generalization (next definition) of $\estHs$ with a scaling 
@@ -294,7 +294,7 @@ and is thus suitable in the presence of \prope{colored} noise.
   }
 \label{def:Hkappa}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defboxt{
   The transfer function $\estHkappa(\omega; \kappa)$ is defined as 
   \\\indentx$\ds
@@ -305,7 +305,7 @@ Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
   }
 \end{definition}
 
-The previous estimators all assumed two signals: an input $\rvx[n]$ and an output $\rvy[n]$.
+The previous estimators all assumed two signals: an input $\rvx(n)$ and an output $\rvy(n)$.
 However, in many practical systems, there is a third signal that is ``driving" the system.
 In 1984 Goyder proposed an estimator (next definition) that is based on three signals.
 %---------------------------------------
@@ -319,7 +319,7 @@ In 1984 Goyder proposed an estimator (next definition) that is based on three si
   }
 \label{def:Hc}
 %---------------------------------------
-Let $\opS$ be a system with input $\rvx[n]$, output $\rvy[n]$, and a driver $\rvp[n]$.
+Let $\opS$ be a system with input $\rvx(n)$, output $\rvy(n)$, and a driver $\rvp(n)$.
 \defboxt{
   The transfer function $\estHc(\omega)$ is defined as 
   \\\indentx$\ds
@@ -351,6 +351,7 @@ Let $\estHkappa(\omega)$ be defined as in \prefpp{def:Hkappa}.
 \begin{minipage}{\tw-65mm}
 \begin{theorem}
 \footnotemark
+\label{thm:H1LS}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated to the right.
 Let $\norm{\rvx}\eqd\pE\brs{\rvx\rvx^\ast}$.
@@ -358,7 +359,7 @@ Let $\norm{\rvx}\eqd\pE\brs{\rvx\rvx^\ast}$.
 \end{minipage}
 \hfill\tbox{\includegraphics{graphics/sysH_estH.pdf}}
 \footnotetext{
-  \citerppgc{bendat1980}{98}{100}{0471058874}{5.1.1 Optimal Character of Calculations},
+  \citerppgc{bendat1980}{98}{100}{0471058874}{5.1.1 Optimal Character of Calculations; note: proof minimizing $\Swvv$ but yields same result},
   \citerppgc{bendat1993}{106}{109}{0471570559}{5.1.1 Optimality of Calculations}
   }
 \thmbox{
@@ -367,81 +368,113 @@ Let $\norm{\rvx}\eqd\pE\brs{\rvx\rvx^\ast}$.
   }
 \\
 \begin{proof}
-\begin{align*}
-  \fCost\brp{\estH}
-    &\eqd \norm{\FW(\omega)-\FQ(\omega)}^2
-  \\&\eqd \inprod{\FW(\omega)-\FQ(\omega)}{\FW(\omega)-\FQ(\omega)}
-  \\&\eqd \pE\brp{\brs{\FW(\omega)-\FQ(\omega)}\brs{\FW(\omega)-\FQ(\omega)}^\ast}
-  \\&=\mathrlap{
-          \pE\brs{\FW(\omega)\FW^\ast(\omega)} 
-        - \pE\brs{\FW(\omega)\FQ^\ast(\omega)} 
-        - \pE\brs{\FQ(\omega)\FW^\ast(\omega)} 
-        + \pE\brs{\FQ(\omega)\FQ^\ast(\omega)} 
-       }
-  \\&= \Swww(\omega) - \Swwq(\omega) - \Swwq^\ast(\omega) + \Swqq(\omega)
-    %&& \text{by \thme{Wiener-Kinchin relationship}}
-  \\&= \Swxx(\omega)\abs{\estH(\omega)}^2 
-     - \estH(\omega)\Swxy(\omega)
-     - \brs{\estH(\omega)\Swxy(\omega)}^\ast
-     + \Swqq(\omega)
-    && \text{by \prefpp{cor:GHz}}
-  \\
-  0
-    &= \pderiv{}{\estH_R}\fCost\brp{\estH} 
-  \\&= \pderiv{}{\estH_R}
-       \brp{\Swxx\abs{\estH}^2 - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swqq}
-  \\&= \pderiv{}{\estH_R}
-       \brp{\Swxx\brs{\estH_R^2+\estH_I^2} - (\estH_R+i\estH_I)\Swxy - (\estH_R+i\estH_I)^\ast\Swxy^\ast + \Swqq}
-  \\&= 2\estH_R\Swxx - \Swxy - \Swxy^\ast + \cancelto{0}{\Swqq}
-  \\&= 2\estH_R\Swxx - 2\Re\Swxy
-  \\&= 2\estH_R\Swxx - 2\Re\Swyx
-  \\&\implies \estH_R = \frac{\Re\Swyx}{\Swxx}
-  \\
-  0
-    &= \pderiv{}{\estH_I}\fCost\brp{\estH} 
-  \\&= \pderiv{}{\estH_I}
-       \brp{\Swxx\abs{\estH}^2 - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swqq}
-  \\&= \pderiv{}{\estH_I}
-       \brp{\Swxx\brs{\estH_R^2+\estH_I^2} - (\estH_I+i\estH_I)\Swxy - (\estH_I-i\estH_I)\Swxy^\ast + \Swqq}
-  \\&= 2\estH_I\Swxx - i\Swxy + i\Swxy^\ast + \cancelto{0}{\Swqq}
-  \\&= 2\estH_I\Swxx - 2i(i\Im\Swxy)
-  \\&= 2\estH_I\Swxx + 2i(i\Im\Swyx)
-  \\&= 2\estH_I\Swxx - 2\Im\Swyx
-  \\&\implies \estH_I = \frac{\Im\Swyx}{\Swxx}
-  \\
-  \\
-  \estH 
-    &= \estH_R + i\estH_I
-  \\&= \frac{\Re\Swyx}{\Swxx} + \frac{i\Im\Swyx}{\Swxx}
-  \\&= \frac{\Re\Swyx + i\Im\Swyx}{\Swxx}
-  \\&= \frac{\Swyx}{\Swxx}
-\end{align*}
+\begin{enumerate}
+  \item Define the \fncte{cost function} $\fCost\brp{\estH}$ for spectral \prope{least-squares} estimate as \label{item:H1LS_cost_def}
+    $\fCost\brp{\estH} \eqd \norm{\FW(\omega)-\FQ(\omega)}^2$
+    \\where $\FW(\omega)$ is the \ope{DTFT} \xref{def:dtft} of $\rvw(n)$ 
+      and   $\FQ(\omega)$ is the \ope{DTFT} of $\rvq(n)$.
+
+  \item lemma: $\fCost\brp{\estH}=\Swxx\abs{\estH}^2 - \estH(\omega)\Swxy - \brs{\estH\Swxy}^\ast + \Swqq$. 
+        Proof: \label{ilem:H1LS_cost}
+    \begin{align*}
+      \fCost\brp{\estH}
+        &\eqd \norm{\FW(\omega)-\FQ(\omega)}^2
+        && \text{by \pref{item:H1LS_cost_def}}
+      \\&\eqd \inprod{\FW(\omega)-\FQ(\omega)}{\FW(\omega)-\FQ(\omega)}
+      \\&\eqd \pE\brp{\brs{\FW(\omega)-\FQ(\omega)}\brs{\FW(\omega)-\FQ(\omega)}^\ast}
+      \\&=\mathrlap{
+              \pE\brs{\FW(\omega)\FW^\ast(\omega)} 
+            - \pE\brs{\FW(\omega)\FQ^\ast(\omega)} 
+            - \pE\brs{\FQ(\omega)\FW^\ast(\omega)} 
+            + \pE\brs{\FQ(\omega)\FQ^\ast(\omega)} 
+           }
+      \\&= \Swww(\omega) - \Swwq(\omega) - \Swwq^\ast(\omega) + \Swqq(\omega)
+        && \text{by \thme{Wiener-Kinchin relationship}}
+      \\&= \Swxx(\omega)\abs{\estH(\omega)}^2 
+         - \estH(\omega)\Swxy(\omega)
+         - \brs{\estH(\omega)\Swxy(\omega)}^\ast
+         + \Swqq(\omega)
+        && \text{by \prefpp{cor:GHz}}
+    \end{align*}
+
+  \item lemma: $\estH_R = \ffrac{\Real\Swyx}{\Swxx}$. Proof: \label{ilem:H1LS_R}
+    \begin{align*}
+      0
+        &= \pderiv{}{\estH_R}\fCost\brp{\estH} 
+      \\&= \pderiv{}{\estH_R}
+           \brp{\Swxx\abs{\estH}^2 - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swqq}
+        && \text{by \prefp{ilem:H1LS_cost}}
+      \\&= \pderiv{}{\estH_R}
+           \brp{\Swxx\brs{\estH_R^2+\estH_I^2} - (\estH_R+i\estH_I)\Swxy - (\estH_R+i\estH_I)^\ast\Swxy^\ast + \Swqq}
+      \\&= 2\estH_R\Swxx - \Swxy - \Swxy^\ast + \cancelto{0}{\pderiv{}{\estH_R}\Swqq}
+        && \text{because $\rvq$ does not vary with $\estH$}
+      \\&= 2\estH_R\Swxx - 2\Real\Swxy
+      \\&= 2\estH_R\Swxx - 2\Real\Swyx
+      \\&\implies \estH_R = \frac{\Real\Swyx}{\Swxx}
+    \end{align*}
+
+  \item lemma: $\estH_I = \ffrac{\Imag\Swyx}{\Swxx}$. Proof: \label{ilem:H1LS_I}
+    \begin{align*}
+      0
+        &= \pderiv{}{\estH_I}\fCost\brp{\estH} 
+      \\&= \pderiv{}{\estH_I}
+           \brp{\Swxx\abs{\estH}^2 - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swqq}
+        && \text{by \prefp{ilem:H1LS_cost}}
+      \\&= \pderiv{}{\estH_I}
+           \brs{\Swxx\brs{\estH_R^2+\estH_I^2} 
+         - (\estH_R+i\estH_I)\Swxy
+         - (\estH_R-i\estH_I)\Swxy^\ast
+         + \Swqq}
+      \\&= 2\estH_I\Swxx - i\Swxy + i\Swxy^\ast + \cancelto{0}{\pderiv{}{\estH_R}\Swqq}
+        && \text{because $\rvq$ does not vary with $\estH$}
+      \\&= 2\estH_I\Swxx - 2i(i\Imag\Swxy)
+      \\&= 2\estH_I\Swxx + 2i(i\Imag\Swyx)
+      \\&= 2\estH_I\Swxx - 2\Imag\Swyx
+      \\&\implies \estH_I = \frac{\Imag\Swyx}{\Swxx}
+     \end{align*}
+
+  \item Proof that $\estH = \ffrac{\Swyx}{\Swxx} \eqd \estH_1$:
+    \begin{align*}
+      \estH(\omega)
+        &= \estH_R(\omega) + i\estH_I(\omega)
+         = \frac{\Real\Swyx(\omega)}{\Swxx(\omega)} + \frac{i\Imag\Swyx(\omega)}{\Swxx(\omega)}
+        && \text{by \pref{ilem:H1LS_R} and \pref{ilem:H1LS_I}}
+      \\&= \frac{\Real\Swyx(\omega) + i\Imag\Swyx(\omega)}{\Swxx(\omega)}
+         = \frac{\Swyx(\omega)}{\Swxx(\omega)}
+         \eqd \estH_1(\omega)
+        && \text{by definition of $\estH_1$}
+        && \text{\xref{def:H1}}
+    \end{align*}
+\end{enumerate}
 \end{proof}
 
-\begin{figure}
-  \centering%
-  \includegraphics{graphics/xhyplusv.pdf}
-  \caption{System model with additive input and output noise\label{fig:xhyplusv}}
-\end{figure}
+%\begin{figure}
+%  \centering%
+%  \includegraphics{graphics/xhyplusv.pdf}
+%  \caption{System model with additive input and output noise\label{fig:xhyplusv}}
+%\end{figure}
 %---------------------------------------
+\begin{minipage}{\tw-70mm}
 \begin{proposition}[Output noise only case]
-\footnote{
-  \citerpgc{shin2008}{294}{0470725648}{$H_1(f)=H(f)$ (9.70); $H_2(f)=H(f)\brp{1+\ffrac{S_{n_yn_y}(f)}{Syy(f)}}$ (9.71)},
-  \citePpc{mitchell1982}{278}{$\~H_2(f)=H_0(f)\brp{1+\ffrac{G_{mm}}{G_{vv}}}$}
-  }
+\footnotemark
+Let $\opS$ be the \structe{system} illustrated to the right.
 \label{prop:estH1}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with \fncte{impulse response} $\fh[n]$,
-input $\fx[n]$, and output $\fy[n]$.
-Let $\rvu[n]$ and $\rvv[n]$ be \fncte{noise sequence}.
-Let $\rvx'[n]\eqd\rvx[n]+\rvu[n]$ and $\rvy'[n]\eqd\rvy[n]+\rvv[n]$.
+\end{proposition}
+\end{minipage}
+\footnotetext{
+  \citerpgc{shin2008}{294}{0470725648}{$H_1(f)=H(f)$ (9.70); $H_2(f)=H(f)\brp{1+\ffrac{S_{n_yn_y}(f)}{S_{yy}(f)}}$ (9.71)},
+  \citePpc{mitchell1982}{278}{$\~H_2(f)=H_0(f)\brp{1+\ffrac{G_{mm}}{G_{vv}}}$}
+  }
+\hfill\tbox{\includegraphics{graphics/sysH_xyuvpq.pdf}}
+\\
 \propbox{
   \brbr{\begin{array}{FMMD}
       (A).& The system $\fh$ is         &\prope{LTI}          & and
-    \\(B).& $\rvx[n]$ and $\rvy[n]$ are &\prope{WSS}          & and
-    \\(C).& $\rvx[n]$ and $\rvv[n]$ are &                     &     
+    \\(B).& $\rvx(n)$ and $\rvy(n)$ are &\prope{WSS}          & and
+    \\(C).& $\rvx(n)$ and $\rvv(n)$ are &                     &     
         \\& \mc{2}{M}{\quad \prope{uncorrelated}}             & and
-    \\(D).& $\rvu[n]=0$                 
+    \\(D).& $\rvu(n)=0$                 
   \end{array}}
   \implies
   \brbl{\begin{array}{F>{\ds}rc>{\ds}lDD}
@@ -449,16 +482,20 @@ Let $\rvx'[n]\eqd\rvx[n]+\rvu[n]$ and $\rvy'[n]\eqd\rvy[n]+\rvv[n]$.
     \\(2).&\estH_2(\omega) &=& \fH(\omega)\brs{1 + \frac{\Swvv(\omega)}{\Swyy(\omega)}} & \mc{2}{D}{\begin{tabular}{l}(\prope{biased})\\(\prope{over estimated})\end{tabular}}
   \end{array}}
   }
-\end{proposition}
+\\
 \begin{proof}
 \begin{align*}
   \estH_1(\omega)
-    &\eqd \frac{\Swxx[y'x](\omega)}{\Swxx(\omega)}
+    &\eqd \frac{\Swyx(\omega)}{\Swxx(\omega)}
     && \text{by definition of $\estH_1$}
     && \text{\xref{def:H1}}
-  \\&=    \frac{\Swyx(\omega)}{\Swxx(\omega)}
-    && \text{by \prefp{prop:Swxyv}}
-  \\&= \fH^\ast(\omega)
+  \\&= \frac{\Swqp(\omega)}{\Swxx(\omega)}
+    && \text{by \prefp{cor:sysH_addnoise}}
+  \\&= \frac{\Swqp(\omega)}{\Swpp(\omega)-\Swuu(\omega)}
+    && \text{by \prefp{cor:xvy}}
+  \\&= \frac{\Swqp(\omega)}{\Swpp(\omega)-\cancelto{0}{\Swuu(\omega)}}
+    && \text{by hypothesis (D)}
+  \\&= \fH(\omega)
     && \text{by \prope{LTI} hypothesis (A)}
     && \text{and \prefp{cor:Swxy}}
   \\
@@ -485,17 +522,14 @@ Let $\rvx'[n]\eqd\rvx[n]+\rvu[n]$ and $\rvy'[n]\eqd\rvy[n]+\rvv[n]$.
   }
 \label{prop:estH2}
 %---------------------------------------
-Let $\opS$ be a \structe{system} with \fncte{impulse response} $\fh[n]$,
-input $\fx[n]$, and output $\fy[n]$.
-Let $\rvu[n]$ and $\rvv[n]$ be \fncte{noise sequence}.
-Let $\rvx'[n]\eqd\rvx[n]+\rvu[n]$ and $\rvy'[n]\eqd\rvy[n]+\rvv[n]$.
+Let $\opS$ be the \structe{system} illustrated in \prefpp{prop:estH1}.
 \propbox{
   \brbr{\begin{array}{FMMD}
-      (A).& The system $\fh$ i s        &\prope{LTI}          & and
-    \\(B).& $\rvx[n]$ and $\rvy[n]$ are &\prope{WSS}          & and
-    \\(C).& $\rvy[n]$ and $\rvu[n]$ are &                     &     
+      (A).& The system $\fh$ is         &\prope{LTI}          & and
+    \\(B).& $\rvx(n)$ and $\rvy(n)$ are &\prope{WSS}          & and
+    \\(C).& $\rvy(n)$ and $\rvu(n)$ are &                     &     
         \\& \mc{2}{M}{\quad              \prope{uncorrelated}}& and
-    \\(D).& $\rvv[n]=0$                 
+    \\(D).& $\rvv(n)=0$                 
   \end{array}}
   \implies
   \brbl{\begin{array}{F>{\ds}rc>{\ds}lDD}
@@ -516,7 +550,7 @@ Let $\rvx'[n]\eqd\rvx[n]+\rvu[n]$ and $\rvy'[n]\eqd\rvy[n]+\rvv[n]$.
     && \text{by \prefp{prop:Swxyv}}
   \\&= \frac{\Swyx(\omega) + \cancelto{0}{\Swyu(\omega)}}
             {\Swxx(\omega) + \Swuu(\omega)}
-    && \text{because $\rvy[n]$ and $\rvu[n]$ are \prope{uncorrelated}}
+    && \text{because $\rvy(n)$ and $\rvu(n)$ are \prope{uncorrelated}}
     && \text{(hypothesis (C))}
   \\&= \frac{\frac{\Swyx(\omega)}{\Swxx(\omega)}}
             {\frac{\Swxx(\omega)}{\Swxx(\omega)} + \frac{\Swuu(\omega)}{\Swxx(\omega)}}
@@ -530,7 +564,7 @@ Let $\rvx'[n]\eqd\rvx[n]+\rvu[n]$ and $\rvy'[n]\eqd\rvy[n]+\rvv[n]$.
   \\&= \frac{\Swyy(\omega)}{\Swxy(\omega) + \Swuy(\omega)}
     && \text{by \prefp{prop:Swxyv}}
   \\&= \frac{\Swyy(\omega)}{\Swxy(\omega) + \cancelto{0}{\Swuy(\omega)}}
-    && \text{because $\rvy[n]$ and $\rvu[n]$ are \prope{uncorrelated}}
+    && \text{because $\rvy(n)$ and $\rvu(n)$ are \prope{uncorrelated}}
     && \text{(hypothesis (C))}
   \\&= \fH(\omega)
     && \text{by \prefp{cor:Swxy}}
@@ -547,13 +581,13 @@ These estimates in general contain some error.
 %---------------------------------------
 \begin{example}[The K=1 Welch estimate of coherence]
 %---------------------------------------
-Suppose we have two \prope{uncorrelated} stationary sequences $\rvx[n]$ and $\rvy[n]$. Then, there
+Suppose we have two \prope{uncorrelated} stationary sequences $\rvx(n)$ and $\rvy(n)$. Then, there
 CSD $\Sxy(\omega)$ should be $0$ because
 \begin{align*}
   \Sxy(\omega)
     &\eqd \opDTFT\pE\Rxy(m)
-  \\&=    \opDTFT\pE\brs{x[n]y[n+m]}
-  \\&=    \opDTFT\brs{\pEx[n]} \brs{\pEy[n+m]}
+  \\&=    \opDTFT\pE\brs{x(n)y[n+m]}
+  \\&=    \opDTFT\brs{\pEx(n)} \brs{\pEy[n+m]}
   \\&=    \opDTFT\brs{0} \brs{0}
   \\&=    0
 \end{align*}
@@ -583,7 +617,7 @@ However, the Welch estimate with $K=1$ will yield
   \citerpgc{ewins1986}{131}{0863800173}{$\gamma^2=\ffrac{H_1(\omega)}{H_2(\omega)}$ (3.8)}
   }
 %---------------------------------------
-Let $\opS$ be a \structe{system} with input $\rvx[n]$ and output $\rvy[n]$.
+Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defboxt{
   The \fnctd{coherence} function $\ds\Cxy \eqd \frac{\Swyx(\omega)}{\Swxx(\omega)}$
   }
