Eliminated several broken citation links. Moved specific pdfs to somepdfs.tex

--- a/common/math/graphics/spaces.tex
+++ b/common/math/graphics/spaces.tex
@@ -2,7 +2,7 @@
 % Daniel J. Greenhoe
 % LaTeX file
 %============================================================================
-\begin{pspicture}(-7,0.5)(5,8.5)%
+\begin{pspicture}(-7,0.5)(5,9)%
   %-------------------------------------
   % settings
   %-------------------------------------
@@ -18,6 +18,8 @@
     % subgriddiv=1,
     % gridlabels=4pt,
     % gridwidth=0.2pt,
+    xunit=1\latunit,
+    yunit=1.25\latunit,
      }%
   %-------------------------------------
   % nodes
