--- a/common/order.tex
+++ b/common/order.tex
@@ -1772,7 +1772,9 @@ Let $\opair{\setX}{\orel}$ be an ordered set and $\psetx$ the power set of $\set
 
 %---------------------------------------
 \begin{definition}
-\label{def:glb}\label{def:inf}\label{def:meet}
+\label{def:glb}
+\label{def:inf}
+\label{def:meet}
 \index{bound!greatest lower bound}
 \index{bound!infimum}
 %---------------------------------------
