--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -272,9 +272,11 @@ Let $\rvx(n)$ and $\rvy(n)$ be \prope{wide sense stationary} \fncte{random seque
 with auto-correlation $\Rxx(m)$ and cross-correlation $\Rxy(m)$.
 Let $\opZ$ be the \ope{Z-transform operator}\ifsxref{dsp}{def:opZ}.
 \\
-\defbox{\begin{array}{MMrclcl}
-   The \opd{z-domain power spectral density} & (\opd{PSD}) $\ZSxx(z)$ of $\vx$ is           & \Szxx(z) &\eqd& \opZ{\Rxx(m)} &\eqd& \ds \sum_{m\in\Z} \Rxx(m) z^{-m}\\
-   The \opd{z-domain cross spectral density} & (\opd{CSD}) $\ZSxy(z)$ of $\vx$ and $\vy$ is & \Szxy(z) &\eqd& \opZ{\Rxy(m)} &\eqd& \ds \sum_{m\in\Z} \Rxy(m) z^{-m}
+\defbox{\begin{array}{MMrcl}
+   The \opd{z-domain cross spectral density} & (\opd{CSD}) $\ZSxy(z)$ of $\vx$ and $\vy$ is 
+     \\\mc{5}{l}{\ds\Szxy(z) \eqd \opZ{\Rxy(m)} \eqd \sum_{m\in\Z} \Rxy(m) z^{-m}}
+     \\
+   The \opd{z-domain power spectral density} & (\opd{PSD}) $\ZSxx(z)$ of $\vx$ is & \Szxx(z) &\eqd& \brlr{\Szxy(z)}_{\rvy(n)=\rvx(n)}
 \end{array}}
 \end{definition}
 
