--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -448,11 +448,6 @@ Let $\norm{\rvx}\eqd\pE\brs{\rvx\rvx^\ast}$.
 \end{enumerate}
 \end{proof}
 
-%\begin{figure}
-%  \centering%
-%  \includegraphics{graphics/xhyplusv.pdf}
-%  \caption{System model with additive input and output noise\label{fig:xhyplusv}}
-%\end{figure}
 %---------------------------------------
 \begin{minipage}{\tw-70mm}
 \begin{proposition}[Output noise only case]
@@ -500,17 +495,18 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     && \text{and \prefp{cor:Swxy}}
   \\
   \estH_2(\omega)
-    &\eqd \frac{\Swxx[y'y'](\omega)}{\Swxy(\omega)}
+    &\eqd \frac{\Swyy(\omega)}{\Swxy(\omega)}
     && \text{by definition of $\estH_2$}
     && \text{\xref{def:H2}}
-  \\&=    \frac{\Swyy(\omega) + \Swvv(\omega)}{\Swxy(\omega)}
-    && \text{by \prefp{prop:Swxyv}}
-  \\&= \frac{\Swyy(\omega)}{\Swxy(\omega)}
-     + \frac{\Swvv(\omega)}{\Swxy(\omega)}
-  \\&= \fH(\omega)
-     + \frac{\Swvv(\omega)}{\frac{\Swyy(\omega)}{\fH(\omega)}}
-    && \text{by \prefp{cor:Swxy}}
-  \\&= \fH(\omega)\brs{1 + \frac{\Swvv(\omega)}{\Swyy(\omega)}}
+  \\&= \frac{\Swqq(\omega) + \Swvv(\omega)}{\Swxy(\omega)}
+    && \text{by \prefp{cor:xvy}}
+  \\&= \frac{\Swqq(\omega)}{\Swxy(\omega)} + \frac{\Swvv(\omega)}{\Swxy(\omega)}
+  \\&= \frac{\Swqq(\omega)}{\Swpq(\omega)} + \frac{\Swvv(\omega)}{\Swpq(\omega)}
+    && \text{by \prefp{cor:sysH_addnoise}}
+  \\&= \fH(\omega) + \frac{\Swvv(\omega)}{\frac{\Swqq(\omega)}{\fH(\omega)}}
+    && \text{by \prope{LTI} hypothesis (A)}
+    && \text{and \prefp{cor:Swxy}}
+  \\&= \fH(\omega)\brs{1 + \frac{\Swvv(\omega)}{\Swqq(\omega)}}
 \end{align*}
 \end{proof}
 
