Least squares H1 introduction

--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -171,23 +171,13 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 \section{LTI filtering of WSS sequences}
 %=======================================
 %---------------------------------------
-\begin{minipage}{\tw-50mm}
 \begin{corollary}
-\footnotemark
-\label{cor:Rxyh}
-%---------------------------------------
-Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n,m)$,
-    $\rvy(n)$    a \fncte{random sequence} with \fncte{auto-correlation} $\Ryy(n,m)$,
-and $\Rxy(n,m)$  the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
-Let $\opS$ be a \structe{system} with input $\rvx(n)$, output $\rvy(n)$, 
-and \fncte{impulse response} $\fh(n)$.
-\end{corollary}
-\end{minipage}
-\hfill\tbox{\includegraphics{graphics/sysH_xy.pdf}}
 \footnotetext{
   \citerp{papoulis}{323}
   }
-\\
+\label{cor:Rxyh}
+%---------------------------------------
+Let $\opS$ be the system defined in \prefpp{thm:Rxyh}.
 \corbox{
   \brbr{\begin{array}{FMD}
       (A). & $\opS$    is \prope{LTI} & and
@@ -202,7 +192,7 @@ and \fncte{impulse response} $\fh(n)$.
      \\(4).&\Ryy(m) &=& \mc{4}{l}{\ds\Rxx^\ast(m)\convd \fh(-m)\convd\fh^\ast(-m)} %&\eqd& \mc{2}{l}{\ds\sum_{p\in\Z}\sum_{k\in\Z}\fh(k)h^\ast(p) \Rxx(m-p-k)}
   \end{array}}
   }
-\\
+\end{corollary}
 \begin{proof}
 \begin{align*}
   \pmeany 
