--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -347,14 +347,27 @@ Let $\estHkappa(\omega)$ be defined as in \prefpp{def:Hkappa}.
   }
 \end{proposition}
 
+\begin{minipage}{\tw-50mm}
+Let $\opS$ be the \structe{system} illustrated to the right.
+\textbf{If} there is no measurement noise on the input and output and \textbf{if}
+$\fh$ is \prope{linear time invariant}, then 
+$\fH = \Swxy/\Swxx$ \xref{cor:Rxyh}.
+But what if there is output measurement noise?
+And what if $\fH$ is not \prope{LTI}?
+What is the best least-squares estimate of $\FH$?
+The answer is the estimator $\estH_1$ \xref{def:H1},
+as demonstrated in the next theorem.
+\end{minipage}
+\hfill\tbox{\includegraphics{graphics/sysHw_xy.pdf}}
+
 %---------------------------------------
-\begin{minipage}{\tw-65mm}
+\begin{minipage}{\tw-75mm}
 \begin{theorem}
 \footnotemark
 \label{thm:H1LS}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated to the right.
-Let $\norm{\rvx}\eqd\pE\brs{\rvx\rvx^\ast}$.
+Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
 \end{theorem}
 \end{minipage}
 \hfill\tbox{\includegraphics{graphics/sysH_estH.pdf}}
@@ -363,8 +376,12 @@ Let $\norm{\rvx}\eqd\pE\brs{\rvx\rvx^\ast}$.
   \citerppgc{bendat1993}{106}{109}{0471570559}{5.1.1 Optimality of Calculations}
   }
 \thmbox{
-  \mcom{\argmin_{\estH}\norm{\FW(\omega)-\FQ(\omega)}^2 = \estH_1(\omega)}
-       {$\estH_1$ is the \prope{least-squares estimator} of $\opS$}
+  \brb{\begin{array}{rclD}
+    \rvu(n) &=& 0 & (zero input noise)
+  \end{array}}
+  \implies
+  \brb{\mcom{\argmin_{\estH}\norm{\FW(\omega)-\FQ(\omega)}^2 = \estH_1(\omega)}
+       {$\estH_1$ is the optimal \prope{least-squares estimator} of $\opS$}}
   }
 \\
 \begin{proof}
