--- a/common/math/graphics/system/sysH_estH.tex
+++ b/common/math/graphics/system/sysH_estH.tex
@@ -4,7 +4,7 @@
 % nominal unit = 10mm
 % see pst-node package: https://ctan.org/pkg/pst-node
 %============================================================================
-\begin{pspicture}(-2.7,-1.3)(3.2,1.9)
+\begin{pspicture}(-3.7,-1.3)(3.2,1.9)
   %-------------------------------------
   % settings
   %-------------------------------------
@@ -16,8 +16,8 @@
   %-------------------------------------
   % transfer function boxes
   %-------------------------------------
-  \fnodeput{0}{ 0}{+0.75}{sysH}{$\fH(\omega)$}%
-  \fnodeput{0}{ 0}{-0.75}{estH}{$\estH(\omega)$}%
+  \fnodeput{0}{ 0}{+0.75}{sysH}{$\fH$}%
+  \fnodeput{0}{ 0}{-0.75}{estH}{$\estH$}%
     %       |   |   |     |       |____ label in box
     %       |   |   |     |____________ node name
     %       |   |   |__________________ y location
@@ -26,7 +26,8 @@
   %--------------------------------------------------------------------------
   % ADDERS: circles with $+$ inside
   %--------------------------------------------------------------------------
-  \cnodeput{0}( 1.5,+0.75){addV}{$+$}%
+  \cnodeput{0}(-2.0, 0.00){addU}{$+$}%
+  \cnodeput{0}( 1.5, 0.75){addV}{$+$}%
     % |     |   |    |     |      |____ $+$ in circle
     % |     |   |    |     |___________ node label
     % |     |   |    |_________________ y location
@@ -36,11 +37,12 @@
   %-------------------------------------
   % node locations
   %-------------------------------------
-  \pnode(+1.50, 1.50){sysV}%
-  \pnode(-2.00, 0.00){sysX}%
-  \pnode(+2.50, 0.75){sysY}%
+  \pnode( 1.50, 1.50){sysV}%
+  \pnode(-3.00, 0.00){sysX}%
+  \pnode( 2.50, 0.75){sysY}%
   \pnode( 0.85, 0.75){sysQ}%
-  \pnode(+1.50,-0.75){sysW}%
+  \pnode(-2.00, 0.75){sysU}%
+  \pnode( 1.50,-0.75){sysW}%
   \pnode(-1.25, 0.75){sysPg}%
   \pnode(-1.25,-0.75){sysPh}%
   \nnode{-1.25}{0.00}{sysP}%
@@ -50,26 +52,30 @@
   %-------------------------------------
   % label text
   %-------------------------------------
+  \uput[  0](sysP) {$\rvp(n)$}%
   \uput[180](sysX) {$\rvx(n)$}%
   \uput[  0](sysY) {$\rvy(n)$}%
   \uput[ 90](sysV) {$\rvv(n)$}%
+  \uput[ 90](sysU) {$\rvu(n)$}%
   \uput[  0](sysW) {$\rvw(n)$}%
-  \uput[-90](sysQ) {$\rvq(n)$}%
-  %-------------------------------------
-  % system connections                     sysV
-  %                             _____        |
-  %                 sysPg      |     | sysQ  v
-  %                   o------->| H(w)|----->(+)------> sysY
-  %                   |        |_____|     addV
-  %                   |
-  %          sysX --->o sysP    __|__(0,0)
-  %                   |           |
-  %                   |         _____
-  %                   |        | ^   |
-  %                   o------->| H(w)|-----> sysW
-  %                 sysPh      |_____|
-  %-------------------------------------
-  \ncline{sysX}{sysP}%
+  \uput[ 90](sysQ) {$\rvq(n)$}%
+  %-------------------------------------                    
+  % system connections                     sysV             
+  %                             _____        |              
+  %                 sysPg      |     | sysQ  v              
+  %           sysU    o------->|  H  |----->(+)------> sysY 
+  %             |     |        |_____|     addV             
+  %             v     |                                     
+  %    sysX ---(+)----o sysP    __|__(0,0)                  
+  %           addU    |           |                         
+  %                   |         _____                       
+  %                   |        |  ^  |                      
+  %                   o------->|  H  |-----> sysW           
+  %                 sysPh      |_____|                      
+  %-------------------------------------                    
+  \ncline{->}{sysX}{addU}%
+  \ncline{->}{sysU}{addU}%
+  \ncline{addU}{sysP}%
   \psline(sysP)(sysPg)%
   \psline(sysP)(sysPh)%
   \ncline{->}{sysPg}{sysH}%
@@ -77,6 +83,7 @@
   \ncline{->}{sysH}{addV}%
   \ncline{->}{estH}{sysW}%
   \ncline{->}{addV}{sysY}%
+  \ncline{->}{sysU}{addU}%
   \ncline{->}{sysV}{addV}%
   %-------------------------------------
   % development support--comment out before final version
